ci: switch to multi-build pipeline for PRs and schedule

--- a/.github/workflows/multibuild-module-artifacts.yml
+++ b/.github/workflows/multibuild-module-artifacts.yml
@@ -1,7 +1,11 @@
 name: build module artifacts for multiple targets
 
 on:
-  push:
+  schedule:
+    - cron: '30 3 * * 2,6'
+  pull_request:
+    branches:
+      - master
   workflow_dispatch:
     inputs:
       openwrt_versions:
