--- a/.github/workflows/build-module-artifacts.yml
+++ b/.github/workflows/build-module-artifacts.yml
@@ -1,11 +1,13 @@
 name: build module artifacts
 
+#on:
+#  schedule:
+#    - cron: '30 3 * * 2,6'
+#  pull_request:
+#    branches:
+#      - master
+
 on:
-  schedule:
-    - cron: '30 3 * * 2,6'
-  pull_request:
-    branches:
-      - master
   workflow_dispatch:
     inputs:
       openwrt_version:
