Disable release readiness checks for now

--- a/.github/workflows/create-release-from-multibuild.yml
+++ b/.github/workflows/create-release-from-multibuild.yml
@@ -64,7 +64,7 @@ jobs:
           set -x
           cd amneziawg-openwrt
           make show-env
-          make check-release
+          #make check-release
 
       - name: checkout openwrt
         uses: actions/checkout@v4
